--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,15 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 
     <script src="https://www.google.com/recaptcha/enterprise.js?render=6Lf26mkkAAAAAE1CxFDoW8xWgQS-hq_HvDKjUpW-"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6XZX0965RF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-6XZX0965RF');
+</script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
